--- a/labs/NewBotACE/csharp/TeamsMessagingExtensionsAction.csproj
+++ b/labs/NewBotACE/csharp/TeamsMessagingExtensionsAction.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="AdaptiveCards" Version="2.7.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.18.1" />
+    <PackageReference Include="Microsoft.Graph" Version="4.47.0" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.18.1" />
   </ItemGroup>
 
   <ItemGroup>
