Removing secrets and references to app id

--- a/BotBuilder DotNet/msgext-action/csharp/appsettings.json
+++ b/BotBuilder DotNet/msgext-action/csharp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MicrosoftAppType": "MultiTenant",
-  "MicrosoftAppId": "a1de36bb-9e9e-4b8e-81f8-853c3bba483f",
-  "MicrosoftAppPassword": "21B8Q~YLj9K5TimKcMbzvevTPy1i7-UtXOjGndnS",
+  "MicrosoftAppId": "<APP ID GOES HERE>",
+  "MicrosoftAppPassword": "<APP SECRET HERE>",
   "MicrosoftAppTenantId": "",
-  "BaseUrl": "https://cbf5-2001-569-500b-5700-1f7-2270-17b0-7b06.ngrok.io"
+  "BaseUrl": "https://URL.GOES.HERE"
 }
