--- a/BotBuilder DotNet/msgext-action/csharp/TeamsAppManifest/manifest.json
+++ b/BotBuilder DotNet/msgext-action/csharp/TeamsAppManifest/manifest.json
@@ -2,7 +2,7 @@
   "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.14/MicrosoftTeams.schema.json",
   "manifestVersion": "1.14",
   "version": "1.0",
-  "id": "a1de36bb-9e9e-4b8e-81f8-853c3bba483f",
+  "id": "<app id>",
   "packageName": "com.microsoft.teams.samples",
   "developer": {
     "name": "Microsoft",
@@ -25,7 +25,7 @@
   "accentColor": "#FFFFFF",
   "bots": [
     {
-      "botId": "a1de36bb-9e9e-4b8e-81f8-853c3bba483f",
+      "botId": "<app id>",
       "needsChannelSelector": false,
       "isNotificationOnly": false,
       "supportsCalling": false,
@@ -40,7 +40,7 @@
   ],
   "composeExtensions": [
     {
-      "botId": "a1de36bb-9e9e-4b8e-81f8-853c3bba483f",
+      "botId": "<app id>",
       "commands": [
         {
           "id": "createCard",
