--- a/BotBuilderNodeJs/msgext-action/nodejs/.env
+++ b/BotBuilderNodeJs/msgext-action/nodejs/.env
@@ -1,5 +1,5 @@
 MicrosoftAppType=MultiTenant
-MicrosoftAppId=<<YOUR MICROSOFT APP ID>>
-MicrosoftAppPassword=<<NEW VALUE HERE>>
+MicrosoftAppId=<<Microsoft-App-ID>>
+MicrosoftAppPassword=<<Microsoft-App-Password>>
 MicrosoftAppTenantId=
-BaseUrl=<<NEW VALUE HERE>>
+BaseUrl=<<validDomain>>
