--- a/BotBuilderNodeJs/msgext-action/nodejs/appPackage/manifest.json
+++ b/BotBuilderNodeJs/msgext-action/nodejs/appPackage/manifest.json
@@ -2,7 +2,7 @@
   "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.14/MicrosoftTeams.schema.json",
   "manifestVersion": "1.14",
   "version": "1.0",
-  "id": "<<YOUR MICROSOFT APP ID>>",
+  "id": "<<Microsoft-App-ID>>",
   "packageName": "com.microsoft.teams.samples",
   "developer": {
     "name": "Microsoft",
@@ -25,7 +25,7 @@
   "accentColor": "#FFFFFF",
   "bots": [
     {
-      "botId":"<<YOUR MICROSOFT APP ID>>",
+      "botId":"<<Microsoft-App-ID>>",
       "needsChannelSelector": false,
       "isNotificationOnly": false,
       "supportsCalling": false,
@@ -40,7 +40,7 @@
   ],
   "composeExtensions": [
     {
-      "botId": "<<YOUR MICROSOFT APP ID>>",
+      "botId": "<<Microsoft-App-ID>>",
       "commands": [
         {
           "id": "createCard",
@@ -125,6 +125,6 @@
     "identity"
   ],
   "validDomains": [
-    "*.ngrok.io"
+    "<<validDomain>>"
   ]
 }
