--- a/labs/NewBotACE/nodejs/appPackage/manifest.json
+++ b/labs/NewBotACE/nodejs/appPackage/manifest.json
@@ -1,130 +1,60 @@
 {
-  "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.14/MicrosoftTeams.schema.json",
-  "manifestVersion": "1.14",
-  "version": "1.0",
-  "id": "<<Microsoft-App-ID>>",
-  "packageName": "com.microsoft.teams.samples",
-  "developer": {
-    "name": "Microsoft",
-    "websiteUrl": "https://dev.botframework.com",
-    "privacyUrl": "https://privacy.microsoft.com",
-    "termsOfUseUrl": "https://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default.aspx"
-  },
-  "name": {
-    "short": "Action Messaging Extension",
-    "full": "Microsoft Teams Action Based Messaging Extension"
-  },
-  "description": {
-    "short": "Sample demonstrating an Action Based Messaging Extension",
-    "full": "Sample Action Messaging Extension built with the Bot Builder SDK"
-  },
-  "icons": {
-    "outline": "outline.png",
-    "color": "color.png"
-  },
-  "accentColor": "#FFFFFF",
-  "bots": [
-    {
-      "botId":"<<Microsoft-App-ID>>",
-      "needsChannelSelector": false,
-      "isNotificationOnly": false,
-      "supportsCalling": false,
-      "supportsVideo": false,
-      "supportsFiles": false,
-      "scopes": [
-        "team",
-        "personal",
-        "groupchat"
-      ]
-    }
-  ],
-  "composeExtensions": [
-    {
-      "botId": "<<Microsoft-App-ID>>",
-      "commands": [
-        {
-          "id": "createCard",
-          "type": "action",
-          "context": [
-            "compose"
-          ],
-          "description": "Command to run action to create a Card from Compose Box",
-          "title": "Create Card",
-          "parameters": [
-            {
-              "name": "title",
-              "title": "Card title",
-              "description": "Title for the card",
-              "inputType": "text"
-            },
-            {
-              "name": "subTitle",
-              "title": "Subtitle",
-              "description": "Subtitle for the card",
-              "inputType": "text"
-            },
-            {
-              "name": "text",
-              "title": "Text",
-              "description": "Text for the card",
-              "inputType": "textarea"
-            }
-          ]
-        },
-        {
-          "id": "shareMessage",
-          "type": "action",
-          "context": [
-            "message"
-          ],
-          "description": "Test command to run action on message context (message sharing)",
-          "title": "Share Message",
-          "parameters": [
-            {
-              "name": "includeImage",
-              "title": "Include Image",
-              "description": "Include image in Hero Card",
-              "inputType": "toggle"
-            }
-          ]
-        },
-        {
-          "id": "FetchRoster",
-          "description": "Fetch the conversation roster",
-          "title": "FetchRoster",
-          "type": "action",
-          "fetchTask": true,
-          "context": [
-            "compose"
-          ]
-        },
-        {
-          "id": "webView",
-          "description": "Fetch the Web View",
-          "title": "Web View",
-          "type": "action",
-          "fetchTask": true,
-          "context": [
-            "compose"
-          ]
-        },
-        {
-          "id": "Static HTML",
-          "description": "Fetch the Static HTML",
-          "title": "Static HTML",
-          "type": "action",
-          "fetchTask": true,
-          "context": [
-            "compose"
-          ]
-        }
-      ]
-    }
-  ],
-  "permissions": [
-    "identity"
-  ],
-  "validDomains": [
-    "<<validDomain>>"
-  ]
+    "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
+    "manifestVersion": "1.9",
+    "version": "1.0.0",
+    "id": "<<Microsoft-App-ID>>",
+    "packageName": "FooBar",
+    "developer": {
+        "name": "Microsoft",
+        "websiteUrl": "https://mwww.microsoft.com",
+        "privacyUrl": "https://mwww.microsoft.com",
+        "termsOfUseUrl": "https://www.microsoft.com/en-us/legal/terms-of-use"
+    },
+    "icons": {
+        "color": "color.png",
+        "outline": "outline.png"
+    },
+    "name": {
+        "short": "DK Local bot",
+        "full": ""
+    },
+    "description": {
+        "short": "DK Local bot",
+        "full": "DK Local bot"
+    },
+    "accentColor": "#FFFFFF",
+    "dashboardCards": [
+	{
+	  "entityId": "<<Microsoft-App-ID>>",
+	  "name": "Bot default name",
+	  "description": "Bot default description",
+	  "context":[
+		"Connections"
+	   ],
+	  "iconProperty": "SharePointLogo", 
+	  "officeFabricIconFontName": "VivaLogo",
+	  "defaultSize": [
+		"medium"
+	   ],
+	  "contentBotId": "<<Microsoft-App-ID>>"
+	}
+    ],    
+    "permissions": [
+        "identity",
+        "messageTeamMembers"
+    ],
+    "validDomains": [
+        "<<validDomains>>"
+    ],
+    "devicePermissions": [
+        "media",
+        "geolocation",
+        "notifications",
+        "midi",
+        "openExternal"
+    ],
+    "webApplicationInfo": {
+    "resource": "https://{teamSiteDomain}",
+    "id": "00000003-0000-0ff1-ce00-000000000000"
+  }
 }
