Add 3pIDP Authentication Bot

--- a/BotBuilder DotNet/msgext-action/csharp/appsettings.json
+++ b/BotBuilder DotNet/msgext-action/csharp/appsettings.json
@@ -1,7 +1,10 @@
 {
   "MicrosoftAppType": "MultiTenant",
-  "MicrosoftAppId": "<APP ID GOES HERE>",
-  "MicrosoftAppPassword": "<APP SECRET HERE>",
+  "MicrosoftAppId": "777b509e-d1bb-4a81-ac31-f21215083b3c",
+  "MicrosoftAppPassword": "fOQ8Q~xqDAqNzS6YXNXHCI35A3G.6ytmbFrfCaGq",
   "MicrosoftAppTenantId": "",
-  "BaseUrl": "https://URL.GOES.HERE"
+  "BaseUrl": "https://157e-2001-4898-80e8-37-fe1c-6bfe-28d6-85ce.ngrok-free.app",
+
+  /* Third Party IDP Support */
+  "ConnectionName": "CMAADIDP"
 }
