--- a/BotBuilder DotNet/msgext-action/csharp/TeamsMessagingExtensionsAction.csproj
+++ b/BotBuilder DotNet/msgext-action/csharp/TeamsMessagingExtensionsAction.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.18.1" />
+    <PackageReference Include="Microsoft.Graph" Version="4.47.0" />
   </ItemGroup>
 
   <ItemGroup>
