--- a/BotBuilder DotNet/msgext-action/csharp/appsettings.json
+++ b/BotBuilder DotNet/msgext-action/csharp/appsettings.json
@@ -1,10 +1,10 @@
 {
-  "MicrosoftAppType": "MultiTenant",
-  "MicrosoftAppId": "777b509e-d1bb-4a81-ac31-f21215083b3c",
-  "MicrosoftAppPassword": "fOQ8Q~xqDAqNzS6YXNXHCI35A3G.6ytmbFrfCaGq",
-  "MicrosoftAppTenantId": "",
-  "BaseUrl": "https://157e-2001-4898-80e8-37-fe1c-6bfe-28d6-85ce.ngrok-free.app",
+  "MicrosoftAppType": "<<NEW VALUE HERE>>",
+  "MicrosoftAppId": "<<NEW VALUE HERE>>",
+  "MicrosoftAppPassword": "<<NEW VALUE HERE>>",
+  "MicrosoftAppTenantId": "<<NEW VALUE HERE>>",
+  "BaseUrl": "<<NEW VALUE HERE>>",
 
   /* Third Party IDP Support */
-  "ConnectionName": "CMAADIDP"
+  "ConnectionName": "<<CONNECTION NAME VALUE HERE>>"
 }
