Revert lab manifest

--- a/labs/NewBotACE/csharp/TeamsAppManifest/manifest.json
+++ b/labs/NewBotACE/csharp/TeamsAppManifest/manifest.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
     "manifestVersion": "1.9",
     "version": "1.0.0",
-    "id": "777b509e-d1bb-4a81-ac31-f21215083b3c",
+    "id": "<<Microsoft-App-ID>>",
     "packageName": "FooBar",
     "developer": {
         "name": "Microsoft",
@@ -15,19 +15,19 @@
         "outline": "outline.png"
     },
     "name": {
-        "short": "CM 3P IDP",
+        "short": "DK Local bot",
         "full": ""
     },
     "description": {
-        "short": "CM 3P IDP",
-        "full": "CM 3P IDP"
+        "short": "DK Local bot",
+        "full": "DK Local bot"
     },
     "accentColor": "#FFFFFF",
     "dashboardCards": [
 	{
-	  "entityId": "777b509e-d1bb-4a81-ac31-f21215083b3c",
-	  "name": "CM 3P IDP",
-	  "description": "CM 3P IDP",
+	  "entityId": "<<Microsoft-App-ID>>",
+	  "name": "Bot default name",
+	  "description": "Bot default description",
 	  "context":[
 		"Connections"
 	   ],
@@ -36,7 +36,7 @@
 	  "defaultSize": [
 		"medium"
 	   ],
-	  "contentBotId": "777b509e-d1bb-4a81-ac31-f21215083b3c"
+	  "contentBotId": "<<Microsoft-App-ID>>"
 	}
     ],    
     "permissions": [
@@ -44,7 +44,7 @@
         "messageTeamMembers"
     ],
     "validDomains": [
-        "https://b72c-2001-4898-80e8-37-4a2c-bf33-1fa4-e2d6.ngrok-free.app"
+        "<<validDomains>>"
     ],
     "devicePermissions": [
         "media",
