Move arguments to Data

--- a/BotBuilder DotNet/msgext-action/csharp/appsettings.json
+++ b/BotBuilder DotNet/msgext-action/csharp/appsettings.json
@@ -1,8 +1,10 @@
 {
-  "MicrosoftAppType": "<<NEW VALUE HERE>>",
-  "MicrosoftAppId": "<<NEW VALUE HERE>>",
-  "MicrosoftAppPassword": "<<NEW VALUE HERE>>",
-  "MicrosoftAppTenantId": "<<NEW VALUE HERE>>",
-  "BaseUrl": "<<NEW VALUE HERE>>",
-  "ConnectionName": "<<CONNECTION NAME VALUE HERE>>"
+  "AppTitle": "CM Bot",
+  "MicrosoftAppType": "MultiTenant",
+  "MicrosoftAppId": "777b509e-d1bb-4a81-ac31-f21215083b3c",
+  "MicrosoftAppPassword": "fOQ8Q~xqDAqNzS6YXNXHCI35A3G.6ytmbFrfCaGq",
+  "MicrosoftAppTenantId": "",
+  "BaseUrl": "https://9b12-2001-4898-80e8-8-ce15-2fc7-16af-e7cd.ngrok-free.app",
+
+  "ConnectionName": "CMAADIDP"
 }
