--- a/BotBuilder DotNet/msgext-action/csharp/TeamsAppManifest/manifest.json
+++ b/BotBuilder DotNet/msgext-action/csharp/TeamsAppManifest/manifest.json
@@ -151,6 +151,6 @@
     "identity"
   ],
   "validDomains": [
-    "https://cbf5-2001-569-500b-5700-1f7-2270-17b0-7b06.ngrok.io"
+    "<<valid domain>>"
   ]
 }
