--- a/labs/NewBotACE/csharp/TeamsMessagingExtensionsAction.csproj
+++ b/labs/NewBotACE/csharp/TeamsMessagingExtensionsAction.csproj
@@ -8,7 +8,9 @@
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="2.7.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="0.0.0" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="0.0.0" />
+    <PackageReference Include="Microsoft.Bot.Schema" Version="0.0.0" />
   </ItemGroup>
 
   <ItemGroup>
