--- a/labs/NewBotACE/nodejs/appPackage/manifest.json
+++ b/labs/NewBotACE/nodejs/appPackage/manifest.json
@@ -2,7 +2,7 @@
     "$schema": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.9/MicrosoftTeams.schema.json",
     "manifestVersion": "1.9",
     "version": "1.0.0",
-    "id": "<<Microsoft-App-ID>>",
+    "id": "16693ec7-72c5-48d9-a68f-bf23f4476792",
     "packageName": "FooBar",
     "developer": {
         "name": "Microsoft",
@@ -25,7 +25,7 @@
     "accentColor": "#FFFFFF",
     "dashboardCards": [
 	{
-	  "entityId": "<<Microsoft-App-ID>>",
+	  "entityId": "16693ec7-72c5-48d9-a68f-bf23f4476792",
 	  "name": "Bot default name",
 	  "description": "Bot default description",
 	  "context":[
@@ -36,7 +36,7 @@
 	  "defaultSize": [
 		"medium"
 	   ],
-	  "contentBotId": "<<Microsoft-App-ID>>"
+	  "contentBotId": "16693ec7-72c5-48d9-a68f-bf23f4476792"
 	}
     ],    
     "permissions": [
@@ -44,7 +44,7 @@
         "messageTeamMembers"
     ],
     "validDomains": [
-        "<<validDomains>>"
+        "https://ebea-2001-4898-80e8-f-25ce-5dba-4904-1467.ngrok-free.app"
     ],
     "devicePermissions": [
         "media",
@@ -54,7 +54,7 @@
         "openExternal"
     ],
     "webApplicationInfo": {
-    "resource": "https://{teamSiteDomain}",
+    "resource": "https://prepspogrid.com",
     "id": "00000003-0000-0ff1-ce00-000000000000"
   }
 }
