--- a/labs/BotAuthenticationACE/nodejs/package.json
+++ b/labs/BotAuthenticationACE/nodejs/package.json
@@ -19,9 +19,9 @@
         "@microsoft/microsoft-graph-client": "^2.2.1",
         "adaptivecards": "^1.2.3",
         "axios": "^0.21.0",
-        "botbuilder": "file:../../../../BotPoweredAcePreview/BotBuilderNodeJS/libraries/botbuilder",
+        "botbuilder": "file:../../..//BotBuilderNodeJS/libraries/botbuilder",
         "botbuilder-dialogs": "^4.18.0",
-        "botframework-schema": "file:../../../../BotPoweredAcePreview/BotBuilderNodeJS/libraries/botframework-schema",
+        "botframework-schema": "file:../../..//BotBuilderNodeJS/libraries/botframework-schema",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "ejs": "^3.1.6",
