--- a/labs/NewBotACE/csharp/TeamsMessagingExtensionsAction.csproj
+++ b/labs/NewBotACE/csharp/TeamsMessagingExtensionsAction.csproj
@@ -8,9 +8,9 @@
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="2.7.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.11" />
-    <PackageReference Include="Microsoft.Bot.Builder" Version="4.22.0-daily.20231103.375540.e4afa43" />
-    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.22.0-daily.20231103.375540.e4afa43" />
-    <PackageReference Include="Microsoft.Bot.Schema" Version="4.22.0-daily.20231103.375540.e4afa43" />
+    <PackageReference Include="Microsoft.Bot.Builder" Version="4.21.2" />
+    <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.21.2" />
+    <PackageReference Include="Microsoft.Bot.Schema" Version="4.21.2" />
   </ItemGroup>
 
   <ItemGroup>
